--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,9 @@ jobs:
       image: node:16
     env:
       MONGODB_CONNECTION_PROTOCOL: mongodb
-      MONGODB_CLUSTER_ADDRESS: mongodb # <- services: mongodb:
-      MONGODB_USERNAME: root # <- services: mongodb: env: MONGO_INITDB_ROOT_USER:
-      MONGODB_PASSWORD: example  # <- services: mongodb: env: MONGO_INITDB_ROOT_PASSWORD:
+      MONGODB_CLUSTER_ADDRESS: mongodb
+      MONGODB_USERNAME: root
+      MONGODB_PASSWORD: example
       PORT: 8080
     services:
       mongodb:
